Add Binder Fixes

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -14,10 +14,12 @@
     "gis = None\n",
     "df = None\n",
     "def get_data():\n",
+    "    if not os.path.exists(\"AGO Data\"):\n",
+    "        os.makedirs(\"AGO Data\")\n",
     "    def get_df(item_id):\n",
     "        data_item = gis.content.get(item_id)\n",
-    "        data_item.download(\"AGO Data\")\n",
-    "        temp_df = pd.read_csv(f'AGO Data\\\\{data_item.name.replace(\"_\", \"\")}', low_memory = False)\n",
+    "        data_item.download(save_path=\"AGO Data\", file_name=\"AGOLData.csv\")\n",
+    "        temp_df = pd.read_csv(os.path.join(\"AGO Data\", \"AGOLData.csv\"), low_memory = False)\n",
     "        return temp_df\n",
     "    \n",
     "    \n",
@@ -471,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e82adf857f10463f832aa1e6682bcd4b",
+       "model_id": "3c534fef712548199733a9baa58d93f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,7 +498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "127d66ff0b2d456bb83cc4023de889a8",
+       "model_id": "ea7fda2f4fd642c3b9c97d2b407479c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -520,7 +522,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eb62d9b01874c75b9c2f9b6aca7e550",
+       "model_id": "6a5adc717d9c4f17a6f47810f89d4803",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,7 +546,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cd266d09c7545e783c10793afc42b56",
+       "model_id": "3c070e4a8efa4ecb811a0c9fa2805842",
        "version_major": 2,
        "version_minor": 0
       },
